--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "TH2",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "mongoose": "^6.3.1",
     "morgan": "^1.10.0"
   }
 }
