--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "TH2",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0"
   }
