--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "joi": "^17.6.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.3.1",
     "morgan": "^1.10.0"
   }
