--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.1",
+    "mongoose-delete": "^0.5.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "store2": "^2.13.2"
