--- a/package.json
+++ b/package.json
@@ -19,14 +19,12 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.1",
     "mongoose-delete": "^0.5.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0",
-    "store2": "^2.13.2"
+    "passport-local": "^1.0.0"
   }
 }
